kustomize/overlays/dev/ingress-class-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
